# self-driven-car-c

./: .gitignore  CMakeLists.txt  README.md  main.cpp  project_files.txt
include/: Car.hpp  Controls.hpp  Game.hpp  Network.hpp  Obstacle.hpp  Road.hpp  Sensor.hpp  Utils.hpp  Visualizer.hpp  activation.hpp  activation_relu.hpp  activation_sigmoid.hpp  activation_softmax.hpp  activation_tanh.hpp  car.hpp  controls.hpp  game.hpp  layer.hpp  loss.hpp  mathematics.hpp  neural_network.hpp  road.hpp  sensor.hpp  util.hpp
src/: CMakeLists.txt  Car.cpp  Controls.cpp  Game.cpp  Network.cpp  Obstacle.cpp  Road.cpp  Sensor.cpp  Utils.cpp  Visualizer.cpp  activation_relu.cpp  activation_sigmoid.cpp  activation_softmax.cpp  activation_tanh.cpp  car.cpp  controls.cpp  game.cpp  layer.cpp  loss.cpp  mathematics.cpp  neural_network.cpp  road.cpp  sensor.cpp  util.cpp
tests/: CMakeLists.txt  test_mathematics.cpp
